fixed artists year button on mobile and footer copyright year (#93)

--- a/src/css/deon-style.css
+++ b/src/css/deon-style.css
@@ -2671,12 +2671,15 @@ textarea.copycredits {
   display: inline-block;
   width: 50%;    
 }
+.panel .button-list > li:first-child{
+  width: 100%;    
+}
 .panel .button-list > li > a{
   text-align: center;
   width: 100%;
   border-right-width: 0px;
 }
-.panel .button-list > li:nth-child(even) > a{
+.panel .button-list > li:nth-child(odd) > a{
   border-right-width: 3px;
 }
 
@@ -2698,7 +2701,7 @@ textarea.copycredits {
   .panel .button-list > li:first-child{
     width: 14.28%;    
   }
-  .panel .button-list > li:nth-child(even) > a{
+  .panel .button-list > li:nth-child(odd) > a{
     border-right-width: 0px;
   }
   .panel .button-list > li:last-child > a{
